# nemiver

./: AUTHORS  COPYING  COPYRIGHT  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.git-commit-messages.txt  README.hacking.txt  README.release.txt  TODO  autogen.sh  coding-style.txt  config.h.in  configure  configure.ac  git-commit-messages.README  gitlog2gnucl  nemiver.desktop  nemiver.desktop.in  nemiver.doap  patch.txt  sed.sh  sed2.sh  short-term-todo-list.txt  svn-commit.tmp
data/: Makefile.am  nemiver.1  nemiver.appdata.xml.in  nemiver.desktop.in
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/hicolor/: Makefile.am
data/schemas/: Makefile.am
data/schemas/gconf/: Makefile.am  nemiver-dbgperspective.schemas  nemiver-workbench.schemas
data/schemas/gsettings/: Makefile.am  org.nemiver.gschema.xml
docs/: Doxyfile.in  Makefile.am  dynamic-modules.txt  mainpage.txt
help/: ChangeLog  Makefile.am  nemiver.omf.in
help/C/: index.docbook  nemiver.xml
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/ko/: ko.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/sl/: sl.po
help/sv/: sv.po
help/zh_CN/: zh_CN.po
src/: Makefile.am  Makefile.in  main.cc
src/DBGPerspective/: DBGPerspective.conf.in  Makefile.am  Makefile.in  nmv-breakpoints-view.cc  nmv-breakpoints-view.h  nmv-call-stack.cc  nmv-call-stack.h  nmv-cur-session-props-dialog.cc  nmv-cur-session-props-dialog.h  nmv-dbg-perspective.cc  nmv-dbg-perspective.h  nmv-dialog.cc  nmv-dialog.h  nmv-load-core-dialog.cc  nmv-load-core-dialog.h  nmv-popup-tip.cc  nmv-popup-tip.h  nmv-preferences-dialog.cc  nmv-preferences-dialog.h  nmv-proc-list-dialog.cc  nmv-proc-list-dialog.h  nmv-proc-mgr.cc  nmv-proc-mgr.h  nmv-run-program-dialog.cc  nmv-run-program-dialog.h  nmv-saved-sessions-dialog.cc  nmv-saved-sessions-dialog.h  nmv-sess-mgr.cc  nmv-sess-mgr.h  nmv-source-editor.cc  nmv-source-editor.h  nmv-terminal.cc  nmv-terminal.h  nmv-thread-list.cc  nmv-throbber.cc  nmv-throbber.h  nmv-throbbler.cc  nmv-throbbler.h  nmv-vars-editor.cc  nmv-vars-editor.h  (+1 more)
src/DBGPerspective/dbgengine/: Makefile.am  (+3 more)
src/common/: Makefile.am  Makefile.in  libnemivercommon.pc.in  list.txt  nmv-address.cc  nmv-address.h  nmv-api-macros.h  nmv-asm-instr.h  nmv-asm-utils.cc  nmv-asm-utils.h  nmv-buffer.h  nmv-conf-manager.cc  nmv-conf-manager.h  nmv-connection-manager.cc  nmv-connection-manager.h  nmv-connection.cc  nmv-connection.h  nmv-date-utils.cc  nmv-date-utils.h  nmv-delete-statement.cc  nmv-delete-statement.h  nmv-dynamic-module.cc  nmv-dynamic-module.h  nmv-env.cc  nmv-env.h  nmv-exception.cc  nmv-exception.h  nmv-i-connection-driver.h  nmv-i-connection-manager-driver.h  nmv-i-input-stream.h  nmv-initializer.cc  nmv-initializer.h  nmv-insert-statement.cc  nmv-insert-statement.h  nmv-libxml-utils.cc  nmv-libxml-utils.h  nmv-loc.h  nmv-log-stream-utils.h  nmv-log-stream.cc  nmv-log-stream.h  (+30 more)
src/confmgr/: Makefile.am  gconfmgr.conf.in  gsettingsmgr.conf.in  nmv-conf-keys.cc  nmv-conf-keys.h  nmv-gconf-keys-defs.cc  nmv-gconf-mgr.cc  nmv-gsettings-keys-defs.cc  nmv-gsettings-mgr.cc  nmv-i-conf-mgr.h
src/dbgengine/: Makefile.am  Makefile.in  cpptrait.conf.in  debuggerengine.conf  gdbengine.conf.in  libdbgengine.pc.in  libgdbmod.pc.in  nemiver-gdb-plugin.pc.in  nmv-asm-utils.h  nmv-cpp-trait.cc  nmv-dbg-common.cc  nmv-dbg-common.h  nmv-debugger-utils.cc  nmv-debugger-utils.h  nmv-gdb-engine.cc  nmv-gdb-engine.h  nmv-gdbmi-parser.cc  nmv-gdbmi-parser.h  nmv-i-debugger.h  nmv-i-lang-trait.h  nmv-i-var-list-walker.h  nmv-i-var-list.h  nmv-i-var-walker-list.h  nmv-i-var-walker.h  nmv-var-list-walker.cc  nmv-var-list.cc  nmv-var-walker-list.cc  nmv-var-walker.cc  nmv-var.h  nmv-varobj-walker.cc  varlist.conf.in  varlistwalker.conf.in  varobjwalker.conf.in  varwalker.conf.in  varwalkerlist.conf.in
src/dbgperspective/: dbgperspective.conf.in  nmv-breakpoints-view.cc  nmv-dbg-perspective.cc  nmv-dialog.h  nmv-proc-mgr.cc  nmv-run-program-dialog.cc  nmv-saved-sessions-dialog.h  nmv-sess-mgr.h  nmv-source-editor.h  nmv-thread-list.h  plugin-descriptor.xml
src/langs/: Makefile.am  nmv-cpp-ast-utils.cc  nmv-cpp-ast-utils.h  nmv-cpp-ast.cc  nmv-cpp-ast.h  nmv-cpp-lexer-utils.cc  nmv-cpp-lexer-utils.h  nmv-cpp-lexer.cc  nmv-cpp-lexer.h  nmv-cpp-parser.cc  nmv-cpp-parser.h
src/persp/: Makefile.am  nmv-i-perspective.h
src/term/: Makefile.am  nmv-terminal.cc
src/uicommon/: Makefile.am  Makefile.in  ephy-spinner-tool-item.c  ephy-spinner-tool-item.h  ephy-spinner.c  ephy-spinner.h  nmv-dialog.cc  nmv-dialog.h  nmv-ephy-throbber.cc  nmv-hex-document.cc  nmv-hex-document.h  nmv-hex-editor.cc  nmv-hex-editor.h  nmv-layout-manager.cc  nmv-layout-manager.h  nmv-layout-selector.cc  nmv-layout-selector.h  nmv-layout.h  nmv-locate-file-dialog.cc  nmv-locate-file-dialog.h  nmv-popup-tip.cc  nmv-popup-tip.h  nmv-source-editor.cc  nmv-source-editor.h  nmv-spinner-tool-item.cc  nmv-spinner-tool-item.h  nmv-spinner.cc  nmv-spinner.h  nmv-terminal.cc  nmv-terminal.h  nmv-throbber.h  nmv-ui-utils.cc  nmv-ui-utils.h
src/workbench/: Makefile.am  Makefile.in  Workbench.conf  Workbench.conf.in  nmv-i-perspective.h  nmv-i-pref-mgr.h  nmv-i-workbench.h  nmv-pref-mgr.cc  nmv-workbench.cc  plugin-descriptor.xml  workbench.conf.in
tests/: Makefile.am  Makefile.in  big-var.c  do-core.cc  do-stack-overflow.cc  fooprog.cc  fork-child.cc  fork-parent.cc  gtkmm-test.cc  inout.cc  libtool-wrapper-with-dashes  locals-in-middle.cc  log.txt  out.txt  pointer-deref.cc  pretty-print.cc  templated-var.cc  test-breakpoint.cc  test-core.cc  test-cpp-lexer.cc  test-cpp-parser.cc  test-cpptrait.cc  test-deref.cc  test-disassemble.cc  test-env.cc  test-gdbmi.cc  test-global-variables.cc  test-libtool-wrapper-detection.cc  test-local-vars-list.cc  test-overloads.cc  test-pretty-print.cc  test-stdout.cc  test-templated-var.cc  test-threads.cc  test-types.cc  test-unicode.cc  test-utils.h  test-var-list.cc  test-var-path-expr.cc  test-var-walker.cc  (+5 more)
(+292 files in other folders)
